changes in about us images

--- a/about-us.html
+++ b/about-us.html
@@ -158,9 +158,9 @@
         </div>
 
         <div class="about-card">
-            <img src="lucky.jpg" alt="Student 3">
-            <h3>Lucky Arora</h3>
-            <p>Hey! I'm Lucky Arora, a web developer at heart. I specialize in front-end development and design, and I'm
+            <img src="nishchal.jpg" alt="Student 3">
+            <h3>Nishchal Thakur</h3>
+            <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and I'm
                 thrilled to be part of this awesome project with my teammates!</p>
         </div>
     </div>
