--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image" href="imagesev2/nd logo.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Feedback Form</title>
+    <title>User Feedback </title>
     <link rel="stylesheet" href="feedback.css">
     <script>
         // Function to validate the form
