--- a/first.html
+++ b/first.html
@@ -197,11 +197,11 @@
     <!-- Navbar -->
     <div id="navbar1">
         <div id="home-icon"><a href="first.html" class="a1" id="home">
-                <div><i class="fa-solid fa-house"></i></div> Home
+                <div><i class="fa-solid fa-house"></i></div> HOME
             </a>
         </div>
-        <div><a href="about-us.html" class="a1" id="about-us">About us</a></div>
-        <div><a href="explore.html" class="a1" id="explore">Explore</a></div>
+        <div><a href="about-us.html" class="a1" id="about-us">ABOUT US</a></div>
+        <div><a href="explore.html" class="a1" id="explore">EXPLORE</a></div>
     </div>
 
     <!-- Dark Mode Button -->
