--- a/about-us.html
+++ b/about-us.html
@@ -145,21 +145,21 @@
     <div class="about-container">
         <div class="about-card">
             <img src="lakshay.jpg" alt="Student 1">
-            <h3>Lakshay Rana</h3>
+            <h3>LAKSHAY RANA</h3>
             <p>Hi! I'm Lakshay Rana, a computer science major at the university. I'm passionate about coding and web
                 development, and I love working on creative projects like this one!</p>
         </div>
 
         <div class="about-card">
             <img src="hiten.jpg" alt="Student 2">
-            <h3>Hiten Jindal</h3>
+            <h3>HITEN JINDAL</h3>
             <p>Hello, I'm Hiten Jindal, studying software engineering. I enjoy learning about new technologies and
                 frameworks, and I'm excited to contribute to the success of this project!</p>
         </div>
 
         <div class="about-card">
             <img src="nishchal.jpg" alt="Student 3">
-            <h3>Nishchal Thakur</h3>
+            <h3>NISHCHAL THAKUR</h3>
             <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and I'm
                 thrilled to be part of this awesome project with my teammates!</p>
         </div>
