edited the visuals

--- a/first.html
+++ b/first.html
@@ -33,9 +33,23 @@
             z-index: 5;
         }
 
-        #boat {
+        #boat1 {
+            font-size: 20px;
+            width: 10px;
+            height: auto;
+            animation: bob 2s ease-in-out infinite;
+        }
+
+        #boat2 {
             font-size: 50px;
-            width: 50px;
+            width: 55px;
+            height: auto;
+            animation: bob 2s ease-in-out infinite;
+        }
+
+        #boat3 {
+            font-size: 35px;
+            width: 30px;
             height: auto;
             animation: bob 2s ease-in-out infinite;
         }
@@ -230,17 +244,17 @@
 <body>
     <!-- Boat 1 -->
 <div class="boat-container" style="animation-delay: 0s;">
-    <i class="fa-solid fa-sailboat" id="boat"></i>
+    <i class="fa-solid fa-sailboat" id="boat1"></i>
 </div>
 
 <!-- Boat 2 -->
 <div class="boat-container" style="animation-delay: 5s;">
-    <i class="fa-solid fa-sailboat" id="boat"></i>
+    <i class="fa-solid fa-sailboat" id="boat2"></i>
 </div>
 
 <!-- Boat 3 -->
 <div class="boat-container" style="animation-delay: 10s;">
-    <i class="fa-solid fa-sailboat" id="boat"></i>
+    <i class="fa-solid fa-sailboat" id="boat3"></i>
 </div>
 
     
