--- a/first.html
+++ b/first.html
@@ -54,16 +54,36 @@
             animation: bob 2s ease-in-out infinite;
         }
 
+        .boat1 {
+            animation: sail 20s linear infinite;
+            animation-delay: 0s;
+        }
+
+        .boat2 {
+            animation: sail 25s linear infinite;
+            animation-delay: 5s;
+        }
+
+        .boat3 {
+            animation: sail 30s linear infinite;
+            animation-delay: 10s;
+        }
+
+
+
+
         /* Boat moves horizontally */
         @keyframes sail {
             0% {
-                left: -60px;
+                left: -10%;
             }
 
             100% {
-                left: 100%;
+                left: 110%;
             }
         }
+
+
 
         /* Boat bobs up and down */
         @keyframes bob {
@@ -243,21 +263,21 @@
 
 <body>
     <!-- Boat 1 -->
-<div class="boat-container" style="animation-delay: 0s;">
-    <i class="fa-solid fa-sailboat" id="boat1"></i>
-</div>
+    <div class="boat-container  boat1">
+        <i class="fa-solid fa-sailboat" id="boat1"></i>
+    </div>
 
-<!-- Boat 2 -->
-<div class="boat-container" style="animation-delay: 5s;">
-    <i class="fa-solid fa-sailboat" id="boat2"></i>
-</div>
+    <!-- Boat 2 -->
+    <div class="boat-container boat2">
+        <i class="fa-solid fa-sailboat" id="boat2"></i>
+    </div>
 
-<!-- Boat 3 -->
-<div class="boat-container" style="animation-delay: 10s;">
-    <i class="fa-solid fa-sailboat" id="boat3"></i>
-</div>
+    <!-- Boat 3 -->
+    <div class="boat-container boat3">
+        <i class="fa-solid fa-sailboat" id="boat3"></i>
+    </div>
 
-    
+
     <!-- Wave animation -->
     <div>
         <div class="wave"></div>
