enhansing color for the website

--- a/first.html
+++ b/first.html
@@ -25,7 +25,7 @@
 
         #navbar1 {
             width: 100%;
-            background-color: #fcc62e;
+            background-color: #f5ba18;
             color: #133042;
             padding: 15px 30px;
             font-size: 24px;
@@ -51,7 +51,7 @@
 
         .a1:hover {
             background-color: #133042;
-            color: #fcc62e;
+            color: #fdd25c;
             padding: 4px 8px;
             border-radius: 4px;
         }
@@ -128,7 +128,7 @@
 
         .btn-explore {
             padding: 15px 30px;
-            background-color: #fcc62e;
+            background-color: #f5bf29;
             color: #133042;
             font-size: 20px;
             font-weight: bold;
@@ -155,7 +155,7 @@
             background-color: transparent;
             border: none;
             font-size: 35px;
-            color: #ffbb00;
+            color: #656463;
             cursor: pointer;
             transition: transform 0.3s ease;
         }
