--- a/loginpg.html
+++ b/loginpg.html
@@ -29,7 +29,7 @@
 		<div class="form">
 			<!--login form start-->
 			<form class="login-form" action="ev2.html" method="">
-				<i class="fas fa-user-circle"></i>
+				<i  id = "icn" class="fas fa-user-circle"></i>
 				<input class="user-input" type="text" name="" placeholder="Username" required>
 				<input class="user-input" type="password" name="" placeholder="Password" required>
 				<div class="options-01">
@@ -53,7 +53,7 @@
 			<!--login form end-->
 			<!--signup form start-->
 			<form class="signup-form" action="ev2.html" method="">
-				<i class="fas fa-user-plus"></i>
+				<i id ="icn2" class="fas fa-user-plus"></i>
 				<input class="user-input" type="text" name="" placeholder="Username" required>
 				<input class="user-input" type="email" name="" placeholder="Email Address" required>
 				<input class="user-input" type="password" name="" placeholder="Password" required>
