navigation bar changes

--- a/first.html
+++ b/first.html
@@ -303,15 +303,14 @@
     <!-- Navbar -->
     <div id="navbar1">
         <div id="home-icon"><a href="first.html" class="a1" id="home">
-                <div><i class="fa-solid fa-house"></i></div> Home
+                <div><i class="fa-solid fa-house">Main Hub</i></div>
             </a>
         </div>
 
-        <div><a href="about-us.html" class="a1" id="about-us">ABOUT US</a></div>
-        <div><a href="explore.html" class="a1" id="explore">EXPLORE</a></div>
+        <div><a href="about-us.html" class="a1" id="about-us">Meet The Team</a></div>
+        <div><a href="explore.html" class="a1" id="explore">Discover More</a></div>
         <div class ="login-button"><a href="loginpg.html" class="a1" id="login">LOGIN</a></div>
-        <div><a href="about-us.html" class="a1" id="about-us">About us</a></div>
-        <div><a href="explore.html" class="a1" id="explore">Explore</a></div>
+       
      
     </div>
 
