--- a/first.html
+++ b/first.html
@@ -99,7 +99,7 @@
 
         #navbar1 {
             width: 100%;
-            background-color: #f5ba18;
+            background-color: #fcc62e;
             color: #133042;
             padding: 15px 30px;
             font-size: 24px;
@@ -125,7 +125,7 @@
 
         .a1:hover {
             background-color: #133042;
-            color: #fdd25c;
+            color: #fcc62e;
             padding: 4px 8px;
             border-radius: 4px;
         }
@@ -202,7 +202,7 @@
 
         .btn-explore {
             padding: 15px 30px;
-            background-color: #f5bf29;
+            background-color: #fcc62e;
             color: #133042;
             font-size: 20px;
             font-weight: bold;
