making some changes in navigation bar

--- a/first.html
+++ b/first.html
@@ -303,13 +303,13 @@
     <!-- Navbar -->
     <div id="navbar1">
         <div id="home-icon"><a href="first.html" class="a1" id="home">
-                <div><i class="fa-solid fa-house">Main Hub</i></div>
+                <div><i class="fa-solid fa-house">Home</i></div>
             </a>
         </div>
 
-        <div><a href="about-us.html" class="a1" id="about-us">Meet The Team</a></div>
-        <div><a href="explore.html" class="a1" id="explore">Discover More</a></div>
-        <div class ="login-button"><a href="loginpg.html" class="a1" id="login">LOGIN</a></div>
+        <div><a href="about-us.html" class="a1" id="about-us">Team</a></div>
+        <div><a href="explore.html" class="a1" id="explore">Explore</a></div>
+        <div class ="login-button"><a href="loginpg.html" class="a1" id="login">Login/Signup</a></div>
        
      
     </div>
