adding some new educational quotes

--- a/education.html
+++ b/education.html
@@ -250,7 +250,11 @@
             { text: "The roots of education are bitter, but the fruit is sweet.", author: "Aristotle" },
             { text: "The function of education is to teach one to think intensively and to think critically. Intelligence plus character – that is the goal of true education.", author: "Martin Luther King Jr." },
             { text: "Education is not preparation for life; education is life itself.", author: "John Dewey" },
-            { text: "What we learn with pleasure, we never forget.", author: "Alfred Mercier" }
+            { text: "Education is the most powerful weapon which you can use to change the world.", author: "Nelson Mandela" },
+            { text: "The beautiful thing about learning is that no one can take it away from you.", author: "B.B King" },
+            { text: "Education is not the filling of a pail, but the lighting of a fire", author: "William Butler Yeats" },
+            { text: "Education is not preparation for life; education is life itself.", author: "John Dewey" },
+            
         ];
 
         // Function to get a random quote
