--- a/loginpg.html
+++ b/loginpg.html
@@ -24,6 +24,9 @@
 				
 			</video>
 		</div>
+		
+		<!-- Dark Mode Toggle Button -->
+		<button id="mode-toggle"><i class="fa-solid fa-moon"></i></button>
 
 		<!--form area start-->
 		<div class="form">
@@ -63,6 +66,7 @@
 				</div>
 			</form>
 			<!--signup form end-->
+
 		</div>
 
 		<div id="navbar1">
@@ -80,6 +84,40 @@
 				height: "toggle", opacity: "toggle"
 			}, "slow");
 		});
+		const toggleBtn = document.getElementById('mode-toggle');
+        const body = document.body;
+        const logo = document.getElementById('logo')
+
+        // Check if dark mode is already set in localStorage
+        if (localStorage.getItem('theme') === 'dark') {
+            body.classList.add('dark-mode');
+            body.classList.remove('light-mode');
+            toggleBtn.querySelector('i').classList.remove('fa-moon');
+            toggleBtn.querySelector('i').classList.add('fa-sun');
+            logo.src = 'logo-dark.png';
+        }
+
+        // Toggle Dark Mode and Light Mode
+        toggleBtn.addEventListener('click', () => {
+            const icon = toggleBtn.querySelector('i');
+
+            if (body.classList.contains('light-mode')) {
+                body.classList.remove('light-mode');
+                body.classList.add('dark-mode');
+                icon.classList.remove('fa-moon');
+                icon.classList.add('fa-sun');
+                logo.src = 'logo-dark.png';
+                localStorage.setItem('theme', 'dark');
+            } else {
+                body.classList.remove('dark-mode');
+                body.classList.add('light-mode');
+                icon.classList.remove('fa-sun');
+                icon.classList.add('fa-moon');
+                logo.src = 'logo.png';
+                localStorage.setItem('theme', 'light');
+            }
+
+        });
 		</script>
 
 	</body>
