--- a/feedback.html
+++ b/feedback.html
@@ -72,13 +72,14 @@
                     <option value="3">3 - Good</option>
                     <option value="4">4 - Very Good</option>
                     <option value="5">5 - Excellent</option>
+                    <option value="6">6 - Outstanding</option>
                 </select>
             </div>
 
             <button type="submit">Submit Feedback</button>
         </form>
         <div id="success-message" style="display:none; color: rgb(48, 237, 48); margin-top: 10px;">
-            Your feedback has been submitted successfully!
+            Your feedback has been submitted successfully.....!
         </div>
     </div>
     <div class="upload-container">
