adding some new relationship quotes

--- a/relationship.html
+++ b/relationship.html
@@ -243,7 +243,9 @@
            {text: "The best relationships are the ones where you can be yourself without the fear of judgment.", author: "Unknown"},
            {text: "The greatest thing you'll ever learn is just to love and be loved in return.", author: "Eden Ahbez"},
            {text: "Love is like the wind, you can't see it but you can feel it", author: "Nicholas Sparks"},
-           {text: "True love doesn't come with conditions, it comes with understanding.", author: "Unknown"}
+           {text: "True love doesn't come with conditions, it comes with understanding.", author: "Unknown"},
+           {text: "You can talk with someone for years, everyday, and still, it won't mean as much as what you can have when you sit in front of someone, not saying a word, yet you feel that person with your heart, you feel like you have known the person for forever.... connections are made with the heart, not the tongue.", author: "C. JoyBell C"},
+           {text: "Man may have discovered fire, but women discovered how to play with it.", author: "Unknown"},
     ];
 
         // Function to get a random quote
