adding feedback form

--- a/wisdom.html
+++ b/wisdom.html
@@ -63,6 +63,9 @@
             left: 0;
             z-index: 10;
         }
+        .feedback-page{
+            margin-left: 1050px;
+        }
 
         /* Navbar content  */
         .a1 {
@@ -214,6 +217,7 @@
     <div id="navbar1">
         <div><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
         <div><a href="about-us.html" class="a1">About us</a></div>
+        <div class="feedback-page"><a href="feedback.html" class="a1">Insights</a></div>
     </div>
 
     <!-- Quote Container -->
