--- a/explore.html
+++ b/explore.html
@@ -71,6 +71,9 @@
             left: 0;
             z-index: 10;
         }
+        .feedback-page{
+            margin-left: 1050px;
+        }
 
         /* Navbar content  */
         .a1 {
@@ -213,6 +216,7 @@
     <div id="navbar1">
         <div><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
         <div><a href="about-us.html" class="a1">About us</a></div>
+        <div class="feedback-page"><a href="feedback.html" class="a1">Feedback</a></div>
     </div>
 
     <!-- Quote Container -->
