--- a/second.html
+++ b/second.html
@@ -169,6 +169,9 @@
             padding: 10px;
             text-decoration: none;
         }
+        .feedback-page{
+            margin-left: 1050px;
+        }
 
         .clickable-div:hover {
             transform: translateY(-10px);
@@ -230,6 +233,7 @@
         <div id="home-icon"><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a>
         </div>
         <div><a href="about-us.html" class="a1">About us</a></div>
+        <div class="feedback-page"><a href="feedback.html" class="a1">Insights</a></div>
     </div>
 
     <!-- Dark mode button -->
