Corrected imaage position in team section

--- a/about-us.html
+++ b/about-us.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="about-card">
-            <img src="nishchal.jpg" alt="Student 3">
+            <img src="nishchal.jpg" alt="Student 3" style="width: 240px; height: 310px">
             <h3>NISHCHAL THAKUR</h3>
             <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and
                 I'm
