added some more wisdom quotes

--- a/wisdom.html
+++ b/wisdom.html
@@ -243,6 +243,7 @@
             { text: "Grace is not part of consciousness; it is the amount of light in our souls, not knowledge nor reason.", author: "Pope Francis" },
             { text: "True wisdom comes to each of us when we realize how little we understand about life, ourselves, and the world around us.", author: "Socrates" },
             { text: "Perhaps instead of bombarding God with requests for what is not, we might try, instead, asking God to open our eyes to see what is.", author: "Margaret Slif" },
+            { text: "If you have knowledge, let others light their candles in it", author: "Unknown" },
         ];
 
         // Function to get a random quote
