--- a/motivation.html
+++ b/motivation.html
@@ -232,6 +232,7 @@
     <script>
         // Array of quotes
         const quotes = [
+            { text: "We cannot solve problems with the kind of thinking we employed when we came up with them.", author: "Albert Einstein" },
             { text: "When you change your thoughts, remember to also change your world.", author: "Norman Vincent Peale" },
             { text: "Success is not final; failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" },
             { text: "If you are working on something that you really care about, you don't have to be pushed. The vision pulls you.", author: "Steve Jobs" },
