--- a/education.html
+++ b/education.html
@@ -235,6 +235,7 @@
     <script>
         // Array of quotes
         const quotes = [
+            {text: "Live as if you were to die tomorrow. Learn as if you were to live forever.", author: "Mahatma Gandhi"}
             { text: "Education is the most powerful weapon which you can use to change the world.", author: "Nelson Mandela" },
             { text: "The beautiful thing about learning is that no one can take it away from you.", author: "B.B. King" },
             { text: "An investment in knowledge pays the best interest.", author: "Benjamin Franklin" },
