added discription in the about us section

--- a/about-us.html
+++ b/about-us.html
@@ -150,23 +150,21 @@
         <div class="about-card">
             <img src="lakshay.jpg" alt="Student 1">
             <h3>LAKSHAY RANA</h3>
-            <p>Hi! I'm Lakshay Rana, a computer science major at the university. I'm passionate about coding and web
-                development, and I love working on creative projects like this one!</p>
-        </div>
+            <p> Hey! I'm  Lakshay Rana, a web developer at heart. I specialize in front-end development and design, and
+                I'm thrilled to be part of this awesome project with my teammates!</p></div>
 
         <div class="about-card">
             <img src="hiten.jpg" alt="Student 2">
             <h3>HITEN JINDAL</h3>
-            <p>Hello, I'm Hiten Jindal, studying software engineering. I enjoy learning about new technologies and
-                frameworks, and I'm excited to contribute to the success of this project!</p>
+            <p>Hi! Hiten Jindal, a computer science major at the university. I'm passionate about coding and web
+                development, and I love working on creative projects like this one!</p>
         </div>
 
         <div class="about-card">
             <img src="nishchal.jpg" alt="Student 3" style="width: 240px; height: 310px">
             <h3>NISHCHAL THAKUR</h3>
-            <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and
-                I'm
-                thrilled to be part of this awesome project with my teammates!</p>
+            <p>Hello, I'm Nishchal Thakur, studying software engineering. I enjoy learning about new technologies and
+                frameworks, and I'm excited to contribute to the success of this project!</p>
         </div>
     </div>
     <script>
