--- a/about-us.html
+++ b/about-us.html
@@ -13,17 +13,13 @@
     <style>
         /* General Body Styles */
         body {
-            height: 100vh;
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #ebeef5;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            margin: auto;
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            overflow: auto;
-            background: linear-gradient(315deg, rgba(255, 255, 204, 1) 3%, rgba(255, 218, 102, 1) 38%, rgba(255, 255, 153, 1) 68%, rgba(255, 204, 51, 1) 98%);
-            animation: gradient 15s ease infinite;
-            background-size: 400% 400%;
-            background-attachment: fixed;
         }
 
         /* Navbar */
@@ -162,10 +158,9 @@
         </div>
 
         <div class="about-card">
-            <img src="nishchal.jpg" alt="Student 3" style="width: 240px; height: 310px">
+            <img src="nishchal.jpg" alt="Student 3">
             <h3>NISHCHAL THAKUR</h3>
-            <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and
-                I'm
+            <p>Hey! I'm Nishchal Thakur, a web developer at heart. I specialize in front-end development and design, and I'm
                 thrilled to be part of this awesome project with my teammates!</p>
         </div>
     </div>
