changed the background images

--- a/feedback.html
+++ b/feedback.html
@@ -31,7 +31,7 @@
 
     <!-- Feedback Form -->
     <form class="clean-form" action="/submit-feedback" method="post" onsubmit="validateForm(event)">
-        <h1><i class="fas fa-comment-dots"></i> User Feedback</h1>
+        <h1><i class="fas fa-comment-dots"></i> User-Feedback</h1>
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your name" required>
 
@@ -41,10 +41,10 @@
         <label for="feedback">Feedback</label>
         <textarea id="feedback" name="feedback" placeholder="Your feedback" required></textarea>
 
-        <label for="rating">Rating</label>
+        <label for="rating">Ratin</label>
         <select id="rating" name="rating" required>
             <option value="">Select a rating</option>
-            <option value="1">1 - Poor</option>
+            <option value="1">1 - Poor </option>
             <option value="2">2 - Fair</option>
             <option value="3">3 - Good</option>
             <option value="4">4 - Very Good</option>
