--- a/feedback.html
+++ b/feedback.html
@@ -41,7 +41,7 @@
         <label for="feedback">Feedback</label>
         <textarea id="feedback" name="feedback" placeholder="Your feedback" required></textarea>
 
-        <label for="rating">Ratin</label>
+        <label for="rating">Rating</label>
         <select id="rating" name="rating" required>
             <option value="">Select a rating</option>
             <option value="1">1 - Poor </option>
