added few more quotes

--- a/wisdom.html
+++ b/wisdom.html
@@ -233,6 +233,9 @@
     <script>
         // Array of quotes
         const quotes = [
+            {text: "Giving up kills people. When people reject giving up… they finally win the right to transcend humanity.", author: "Alucard, Hellsing"},
+            {text: "", author: ""},
+            {text: "The world isn't perfect. But it's there for us, doing the best it can… that's what makes it so damn beautiful.", author: "Roy Mustang, Full Metal Alchemist"},
             { text: "We must believe that we are gifted for something, and that this thing, at whatever cost, must be attained.", author: "Marie Curie" },
             { text: "The older I get, the greater power I seem to have to help the world; I am like a snowball - the further I am rolled the more I gain.", author: "Susan B. Anthony" },
             { text: "When one door of happiness closes, another one opens; but we look so long at the closed door that we do not see the one which has opened for us.", author: "Helen Keller" },
