changed 'first.html' to 'index.html'

--- a/about-us.html
+++ b/about-us.html
@@ -142,7 +142,7 @@
 
     <!-- Navbar -->
     <div id="navbar1">
-        <a href="first.html" class="a1"><i class="fa-solid fa-house"></i> Home</a>
+        <a href="index.html" class="a1"><i class="fa-solid fa-house"></i> Home</a>
     </div>
     <button id="mode-toggle"><i class="fa-solid fa-moon"></i></button>
     <!-- About Us Section -->
