--- a/feedback.html
+++ b/feedback.html
@@ -21,7 +21,7 @@
 
     <!-- Navbar -->
     <div id="navbar1">
-        <div id="home-icon"><a href="first.html" class="a1" id="home">
+        <div id="home-icon"><a href="index.html" class="a1" id="home">
             <div><i class="fa-solid fa-house"></i></div> HOME
         </a></div>
     </div>
