--- a/loginpg.html
+++ b/loginpg.html
@@ -4,7 +4,7 @@
 		<link rel="icon" type="image" href="imagesev2/nd logo.jpg">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<title>Responsive Login Page</title>
+		<title>Login Page</title>
 
 		<link rel="icon" type="image" href="logo.png">
 		<link rel="stylesheet" href="loginpg.css">
@@ -70,7 +70,7 @@
 		</div>
 
 		<div id="navbar1">
-			<div id="home-icon"><a href="first.html" class="a1" id="home">
+			<div id="home-icon"><a href="index.html" class="a1" id="home">
 					<div><i class="fa-solid fa-house"></i></div> HOME
 				</a>
 			</div>
