--- a/motivation.html
+++ b/motivation.html
@@ -215,7 +215,7 @@
     <!-- Header -->
     <div id="header">Motivational Quote</div>
     <div id="navbar1">
-        <div><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
+        <div><a href="index.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
         <div><a href="about-us.html" class="a1">About us</a></div>
         <div class="feedback-page"><a href="feedback.html" class="a1">Insights</a></div>
     </div>
