--- a/explore.html
+++ b/explore.html
@@ -214,7 +214,7 @@
     <div id="header">Let the Quotes Choose You</div>
 
     <div id="navbar1">
-        <div><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
+        <div><a href="index.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a></div>
         <div><a href="about-us.html" class="a1">About us</a></div>
         <div class="feedback-page"><a href="feedback.html" class="a1">Feedback</a></div>
     </div>
