--- a/second.html
+++ b/second.html
@@ -230,7 +230,7 @@
 
     <!-- Navbar -->
     <div id="navbar1">
-        <div id="home-icon"><a href="first.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a>
+        <div id="home-icon"><a href="index.html" class="a1" id="home"><i class="fa-solid fa-house"></i> Home</a>
         </div>
         <div><a href="about-us.html" class="a1">About us</a></div>
         <div class="feedback-page"><a href="feedback.html" class="a1">Insights</a></div>
